# KLC

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_v084.md  RELEASE_v103.md  _parser_orig.rs  build.rs  build_err.txt  debug.txt  dump_pe.py  klc IDE.txt  resources.rc
.obsidian/: workspace.json
benches/: _test_brk_cont.klc  _test_minimal.klc  _test_small.klc  _test_while.klc  factorial_tco.klc  fibonacci_iter.klc  loop_compute.klc  test_continue_break.klc
benchmarks/: jit_loop.klc
benchmarks/benchmarks/: jit_bench.klc
docs/: KLC_v1.0.3_官方发行说明书与使用手册.md  KLC_v1.0.3_项目文档.md  USAGE.md  lang_spec.md
examples/: _dbg2.txt  _out2.txt  concurrency.klc  fibonacci.klc  generics.klc  gui_demo.klc  hello.klc  pattern_match.klc  test_arr_len.klc  test_chain_len.klc  test_complex_len.klc  test_create.klc  test_field_conflict.klc  test_map.klc  test_native.klc  test_nested.klc  test_uniquenames.klc  test_v084.klc  test_v084_features.klc  test_v084_mixed.klc  transformer_chat.klc
examples/ai_lib/: README_INFERENCE.md  activation.klc  ai_demo.klc  demo.klc  demo_simple.klc  ide_integration.klc  inference_engine.klc  memory_pool.klc  normalization.klc  (+9 more)
lexer/: lexer_core.klc  token.klc
parser/: ast.klc  parser_core.klc
src/: ast.rs  bytecode.rs  bytecode_optimize.rs  codegen.rs  dwarf.rs  formatter.rs  lexer.rs  main.rs  module.rs  native_codegen.rs  parser.rs  token.rs  vm.rs
test/: _out.txt  _upper.klc  std_all_new.klc  std_array_test.klc  std_assert_fail_test.klc  std_io_quick.klc  std_io_test.klc  std_math_test.klc  std_string_test.klc  std_util_test.klc
(+49 files in other folders)
